# libKIni

./: CMakeLists.txt  KIni.cpp  KIni.h  README.md  libKIniConfig.cmake.in
src/: CMakeLists.txt  KIni.cpp
